fixed a few styling issues on iphone 7's

--- a/frontend/src/routes/SignUpPage/index.scss
+++ b/frontend/src/routes/SignUpPage/index.scss
@@ -1,16 +1,20 @@
 .bx--label {
-    text-align: left;
+	text-align: left;
 }
 
 .bx--multi-select__wrapper .bx--list-box__wrapper {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .bx--btn {
-    font-size: small;
+	font-size: small;
 }
 
 .bx--btn--secondary {
-    min-height: 2rem;
-    padding: calc(0.375rem - 3px) 60px calc(0.375rem - 3px) 12px;
+	min-height: 2rem;
+	padding: calc(0.375rem - 3px) 60px calc(0.375rem - 3px) 12px;
+}
+
+.signup-form {
+	margin-top: 3rem;
 }
